vlib/v/checker/tests/match_interface_unknown_generic_concrete_type_err.vv
interface Value {}

struct Box[T] {
	val T
}

struct Holder {
	val Value
}

fn main() {
	s := Holder{
		val: 42
	}

	match s.val {
		Box[Missing] {
			''
		}
		else {
			''
		}
	}
}
